--- a/src/components/cart/Cart.scss
+++ b/src/components/cart/Cart.scss
@@ -36,7 +36,7 @@
                     font-weight: bold;
                 }
             }
-            &.list-product {
+            &.list-products {
                 li {
                     display: flex;
                     margin-bottom: 30px;
