--- a/src/components/checkout/Product.css
+++ b/src/components/checkout/Product.css
@@ -1,13 +1,33 @@
-.product .img {
-  position: relative;
+.product {
+  margin-bottom: 20px;
 }
 
-.product .img span {
+.product p {
+  margin: 0;
+}
+
+.product p.img {
+  position: relative;
+  width: 85px;
+  border: 1px solid #d4d4d4;
+  border-radius: 5px;
+}
+
+.product p.img span {
   position: absolute;
-  padding: 4px;
   border-radius: 50%;
-  background: wheat;
-  top: -50%;
-  right: 50%;
+  width: 25px;
+  background: #e4e4e4;
+  height: 25px;
+  text-align: center;
+  right: -10px;
+  top: -10px;
+}
+
+.product p.name {
+  width: 45%;
+  margin-left: 10px;
+  font-weight: bold;
+  color: #af744b;
 }
 /*# sourceMappingURL=Product.css.map */
