--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -20,7 +20,7 @@
         .logo {
             width: 165px;
         }
-        .nav-item {
+        .nav-item__icon {
             margin: 0 30px;
             font-size: 22px;
             cursor: pointer;
