--- a/src/components/home/products/Product.scss
+++ b/src/components/home/products/Product.scss
@@ -7,11 +7,12 @@
         align-items: center;
         border: none;
         width: 100%;
-        padding-top: 25px;
-        padding-bottom: 25px;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
         .box-img {
             text-align: center;
             padding: 1rem;
+            padding-bottom: 0;
         }
         img {
             width: 80%;
@@ -20,15 +21,23 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            padding-top: 0;
             .card-title {
                 margin: 0;
-                font-size: 1.1rem;
+                font-size: 1rem;
                 text-align: center;
+                color: #636363;
+                height: 60px;
+                font-weight: bold;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 -webkit-line-clamp: 2;
                 display: -webkit-box;
                 -webkit-box-orient: vertical;
+                transition: .3s;
+                &:hover {
+                    color: #2f2f2f;
+                }
             }
             .price {
                 text-align: center;
