--- a/src/components/home/products/Product.css
+++ b/src/components/home/products/Product.css
@@ -15,13 +15,14 @@
           align-items: center;
   border: none;
   width: 100%;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .product .card .box-img {
   text-align: center;
   padding: 1rem;
+  padding-bottom: 0;
 }
 
 .product .card img {
@@ -39,17 +40,27 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-top: 0;
 }
 
 .product .card .card-body .card-title {
   margin: 0;
-  font-size: 1.1rem;
+  font-size: 1rem;
   text-align: center;
+  color: #636363;
+  height: 60px;
+  font-weight: bold;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   display: -webkit-box;
   -webkit-box-orient: vertical;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.product .card .card-body .card-title:hover {
+  color: #2f2f2f;
 }
 
 .product .card .card-body .price {
