--- a/src/components/listproducts/ListProducts.css
+++ b/src/components/listproducts/ListProducts.css
@@ -2,6 +2,13 @@
   width: 100%;
   margin: 0;
   padding: 2rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .container-products h3 {
