--- a/src/components/listproducts/ListProducts.scss
+++ b/src/components/listproducts/ListProducts.scss
@@ -2,6 +2,8 @@
     width: 100%;
     margin: 0;
     padding: 2rem 0;
+    display: flex;
+    flex-direction: column;
     h3 {
         padding: 1rem;
     }
