--- a/src/components/productdetail/ProductDetail.scss
+++ b/src/components/productdetail/ProductDetail.scss
@@ -104,6 +104,7 @@
         display: flex;
         flex-wrap: wrap;
         padding: 0;
+        width: 100%;
         .product {
             width: 20%;
             border: none;
