--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -49,7 +49,11 @@
                             background-color: white;
                             transition: .3s;
                             &.submit-login {
+                                margin: 0;
                                 margin-right: 10px;
+                            }
+                            &.submit-sign-up {
+                                margin: 0;
                             }
                             &:hover {
                                 transform: translateY(-2px);
