--- a/src/components/checkout/Product.scss
+++ b/src/components/checkout/Product.scss
@@ -18,11 +18,11 @@
                 top: -10px;
             }
         }
-        &.name {
-            width: 45%;
-            margin-left: 10px;
-            font-weight: bold;
-            color: #af744b;
-        }
+    }
+    .name {
+        width: 45%;
+        margin-left: 10px;
+        font-weight: bold;
+        color: #af744b;
     }
 }
