--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -41,6 +41,13 @@
                             font-size: 13px;
                         }
                     }
+                    span {
+                        margin-right: auto;
+                        font-size: 0.8rem;
+                        font-style: italic;
+                        color: #ececec;
+                        margin-bottom: 10px;
+                    }
                     .box-submit {
                         .btn {
                             color: #505050;
