--- a/src/components/cart/Cart.scss
+++ b/src/components/cart/Cart.scss
@@ -29,6 +29,7 @@
         }
         > ul {
             &.list-title {
+                padding-left: 0;
                 li {
                     width: 20%;
                     text-align: center;
@@ -38,6 +39,7 @@
                 }
             }
             &.list-products {
+                padding-left: 0;
                 flex-direction: column;
                 li {
                     display: flex;
@@ -104,6 +106,16 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+    }
+}
+@media (max-width: 992px) {
+    .box-cart {
+        &__products {
+            padding: 3rem 1rem;
+        }
+        .box-total {
+            padding: 3rem;
         }
     }
 }
