--- a/src/components/productdetail/ProductDetail.scss
+++ b/src/components/productdetail/ProductDetail.scss
@@ -6,10 +6,11 @@
     .img-product {
         padding: 2rem;
         background-color: #fbf4ed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         .img {
             width: 70%;
-            margin-left: auto;
-            margin-right: 0;
         }
     }
     .content {
@@ -112,6 +113,15 @@
             .card {
                 background: #f7f5f0;
                 border-radius: 15px;
+            }
+        }
+    }
+}
+@media (max-width: 768px) {
+    .same-products {
+        .list-products {
+            .product {
+                width: 40%;
             }
         }
     }
