--- a/src/components/saveMoney/SaveMoney.scss
+++ b/src/components/saveMoney/SaveMoney.scss
@@ -15,3 +15,10 @@
         color: #5f3434;
     }
 }
+@media (max-width: 768px) {
+    .save-money {
+        background-size: cover;
+        padding: 2rem;
+        justify-content: center;
+    }
+}
