--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -6,9 +6,10 @@
     width: 100%;
     height: 100vh;
     &__form {
-        height: 20%;
+        min-height: 20%;
         background: whitesmoke;
         width: 100%;
+        display: flex;
         form {
             width: 70%;
             .form-control {
@@ -16,6 +17,33 @@
                 background: none;
                 border-bottom: 1px solid #dadada;
                 border-radius: 0;
+            }
+            .form-input {
+                width: 100%;
+                position: relative;
+                .list-products-search {
+                    position: absolute;
+                    width: 100%;
+                    display: flex;
+                    background: whitesmoke;
+                    max-height: 50vh;
+                    overflow-y: auto;
+                    .nav-item {
+                        color: #505050;
+                        width: 100%;
+                        .nav-link {
+                            color: #505050;
+                            &:hover {
+                                color: black;
+                            }
+                        }
+                        span {
+                            margin: 0.5rem;
+                            font-style: italic;
+                            font-size: 0.8rem;
+                        }
+                    }
+                }
             }
             .search-btn {
                 background: #f1d7c2;
